challenge user input error handling